--- a/test.html
+++ b/test.html
@@ -1266,7 +1266,7 @@
             margin: 0 auto;
         }
     </Style></span>
-<form id="j_id0:j_id8" name="j_id0:j_id8" method="post" action="https://anarchin-jp.github.io/testpage/test2.html" enctype="application/x-www-form-urlencoded">
+<form id="j_id0:j_id8" name="j_id0:j_id8" method="get" action="https://anarchin-jp.github.io/testpage/test2.html" enctype="application/x-www-form-urlencoded">
 <input type="hidden" name="j_id0:j_id8" value="j_id0:j_id8" />
 
         <div id="theBody">
@@ -1509,3 +1509,4 @@
 
 
 });</script></body></html>
+
