--- a/list4.html
+++ b/list4.html
@@ -2,7 +2,7 @@
 <html lang=ja style>
     <!--
  Page saved with SingleFile 
- url: https://shigaku-tokyo-k.my.site.com/ShigakuApp/AppDetail_p?applyId=a13RB00000dFCbwYAG&applyName=%E6%8E%88%E6%A5%AD%E6%96%99%E8%BB%BD%E6%B8%9B%E5%8A%A9%E6%88%90%E9%87%91 
+ url: https://shigaku-tokyo-k.my.site.com/ShigakuApp/AppDetail_p?applyId=a13RB00000dFCbwYAshigaku-tokyo-k.my.site.comG&applyName=%E6%8E%88%E6%A5%AD%E6%96%99%E8%BB%BD%E6%B8%9B%E5%8A%A9%E6%88%90%E9%87%91 
  saved date: Mon Dec 22 2025 09:53:43 GMT+0900 (일본 표준시)
 -->
     <meta charset=utf-8>
@@ -26,7 +26,7 @@
             display: none!important
         }
     </style>
-    <link rel=canonical href="https://shigaku-tokyo-k.my.site.com/ShigakuApp/AppDetail_p?applyId=a13RB00000dFCbwYAG&amp;applyName=%E6%8E%88%E6%A5%AD%E6%96%99%E8%BB%BD%E6%B8%9B%E5%8A%A9%E6%88%90%E9%87%91">
+    <link rel=canonical href="index.html">
     <meta http-equiv=content-security-policy content="default-src 'none'; font-src 'self' data:; img-src 'self' data:; style-src 'unsafe-inline'; media-src 'self' data:; script-src 'unsafe-inline' data:; object-src 'self' data:; frame-src 'self' data:;">
     <body>
         <span id=Page:appStyle>
@@ -249,7 +249,7 @@
                 text-decoration: underline!important
             }
         </style>
-        <a href=https://shigaku-tokyo-k.my.site.com/apex/AppMyPage_p>
+        <a href=index.html>
             <span id=Page:appHeader>
                 <style class=sf-hidden>
                     .logoHeader {
