--- a/list4.html
+++ b/list4.html
@@ -845,7 +845,7 @@
                             <td>
                                 <div style=display:block>
                                     <div class="widthSpan dPageText1">
-                                        <a class=attentionLink href=https://shigaku-tokyo-k.my.site.com/ShigakuApp/resource/1671626353000/SubsidyAttention>留意事項及び個人情報の取扱いについて
+                                        <a class=attentionLink href=index.html>留意事項及び個人情報の取扱いについて
  </a>
                                     </div>
                                     <div class="widthSpan dPageText2 sf-hidden"></div>
