--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
  </ul>
  </li>
  <li class="parents on">
- <a href=https://www.shigaku-tokyo.or.jp/parents_index.html>都民・保護者の皆様へ</a>
+ <a href=index.html>都民・保護者の皆様へ</a>
  <ul>
  <li class=sf-hidden></li>
  <li class=sf-hidden></li>
